--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "graphql": "^0.13.2",
     "json-server": "^0.14.0",
     "lodash": "^4.17.10"
+  },
+  "devDependencies": {
+    "eslint": "^5.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
